# cka

./: LICENSE  README.md  cka.opam  dune-project
.github/workflows/: check.yml
lib/: SeriesRational.ml  SeriesRational.mli  dune  lexer.mll  multiset.ml  multiset.mli  nfa.ml  nfa.mli  parser.mly  petriNet.ml  petriNet.mli  refinement.ml  refinement.mli
test/: cka.ml  dune
